attempt to fix paypal not showing on order from

--- a/src/components/Commissions/commissions.module.sass
+++ b/src/components/Commissions/commissions.module.sass
@@ -43,6 +43,8 @@
       .right
         //margin: 0 auto
         display: table
+        a
+          text-decoration: none
 
       @media screen and (max-width: 500px)
         display: block
