--- a/src/components/Order/order.module.sass
+++ b/src/components/Order/order.module.sass
@@ -12,7 +12,6 @@
   size: 100%
   top: center
   left: center
-  overflow: hidden
   z-index: 999
   *
     animation: fadein 0.2s
@@ -104,11 +103,12 @@
       grid-area: right
       @media screen and (max-width: $m)
         width: 100% 
-        height: 1050px
+        height: max-content
         overflow: hidden
         //grid-area: none
         position: relative
         margin-top: 90%
+        padding-bottom: 200px
       #paypalHolder
         width: 300px
         height: 60px
